# symbolic-reasoning

./: .amlignore  .env  .gitignore  Cargo.toml  README.md  deep_main.py  deep_main_cuda.py  flat_main.py  generate.py  main.py  package.json  pylintrc  requirements.txt  run_tests.py  run_tests.sh  setup.cfg  summary.py  train.py  visu.py
azure/: .traceignore  Dockerfile  README.md  additional_files.txt  build.sh  builder.Dockerfile  download.py  expand_additional_files.py  extract_used_files.py  resolve_symlinks.py  runner.Dockerfile  strip_and_pack.sh  submit.py  submit_solve.py  submit_t3.py  submit_train.py
ci/: iconv-0.2.1-cp37-cp37m-linux_x86_64.whl  iconv-0.3.3-cp38-cp38-linux_x86_64.whl
common/: io.py  parameter_search.py  parameter_search_specs.py  reports.py  timer.py  utils.py
deep/: dataset.py  generate.py  generate.specs.py  generate_specs.py  model.py  node.py
docs/: citations.md  concepts.md  decisions.md  notes.md
generator/: Cargo.toml  README.md
generator/assets/: declarations.yaml  premises.txt  rules.txt
generator/src/: augmentation.rs  configuration.rs  filter.rs  io.rs  iter_extensions.rs  main.rs  rose.rs  svg.rs  trace.rs  variable_generator.rs
pycore/: Cargo.toml
pycore/src/: apply.rs  bag.rs  common.rs  context.rs  fit.rs  lib.rs  rule.rs  scenario.rs  solver_trace.rs  symbol.rs  symbol_builder.rs  trace.rs
pycore/src/bag/: fitinfo.rs  meta.rs  mod.rs  sample.rs
pycore/test/: apply.py  bag.py  fit.py  real_problems.py  rule.py  run_tests.py  sample.py  scenario.py  solver_statistics.py  symbol.py  symbol_builder.py  trace.py
(+200 files in other folders)
