[package]
name = "generator"
version = "0.1.0"
authors = ["Matthias Lochbrunner <matthias_lochbrunner@web.de>"]
edition = "2018"

[dependencies]
core = { path = "../libcore" }
maplit = "^1.0.1"
palette = "0.4"
itertools = "0.8"
rand = "0.6.5"
clap = "2.33.0"
serde = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
rayon = "^1.3.0"