[package]
name = "pycore"
version = "0.1.0"
authors = ["Matthias Lochbrunner <matthias_lochbrunner@web.de>"]
edition = "2018"

[lib]
name = "pycore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.8.3    ", features = ["extension-module", "unsound-subclass"]}
core = { path = "../libcore" }