[package]
name = "pycore"
version = "0.1.0"
authors = ["Matthias Lochbrunner <matthias_lochbrunner@web.de>"]
edition = "2018"

[lib]
name = "pycore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.11.1", features = ["extension-module"]}
numpy = "0.11.0"
ndarray = "0.13"
#ndarray = "0.15.6"
core = { path = "../libcore" }